--- a/slim/app/templates/domain.html
+++ b/slim/app/templates/domain.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-<form action="#" method="POST">
+
+<form action="{{ url_for('by_domain') }}" method="POST" role="form" id="domain_search">
   <div class="form-group">
     <label for="domain_name">Domain name</label>
-    <input id="domain_name" type="text" class="form-control" placeholder="{% if domain_name %} {{ domain_name }} {% else %}Domain name{% endif %}" />
+    <input name="domain_name" type="text" class="form-control" placeholder="{% if domain_name %} {{ domain_name }} {% else %}Domain name{% endif %}" />
   </div>
   <button type="submit" class="btn btn-default">Search</button>
 </form>
