--- a/slim/app/templates/pattern.html
+++ b/slim/app/templates/pattern.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block body %}
-<form action="#" method="POST">
+
+<form action="{{ url_for('by_pattern') }}" method="POST" role="form" id="pattern_search">
   <div class="form-group">
     <label for="pattern_name">Pattern name</label>
-    <input id="pattern_name" type="text" class="form-control" placeholder="{% if pattern_name %} {{ pattern_name }} {% else %}Pattern name{% endif %}" />
+    <input name="pattern_name" type="text" class="form-control" placeholder="{% if pattern_name %} {{ pattern_name }} {% else %}Pattern name{% endif %}" />
   </div>
   <button type="submit" class="btn btn-default">Search</button>
 </form>
