Make tables slightly less horrific

--- a/slim/app/templates/domain.html
+++ b/slim/app/templates/domain.html
@@ -10,7 +10,7 @@
 </form>
 
 {% if domains %}
-<table>
+<table class="table table-striped">
   <tr>
     {% for col in domain_cols %}
     <th>{{ col }}</th>
