--- a/slim/app/templates/pattern.html
+++ b/slim/app/templates/pattern.html
@@ -10,7 +10,7 @@
 </form>
 
 {% if patterns %}
-<table>
+<table class="table table-striped">
   <tr>
     {% for col in pattern_cols %}
     <th>{{ col }}</th>
